# Ostad-Module-11

./: .dockerignore  .gitignore  README.md  app.py  dockerfile  evaluate.py  inference.py  main.py  pyproject.toml  requirements.txt
runs/detect/predict/labels/: Screenshot-2026-01-05-203812_png.rf.dcb60b4a5a3a3504f0caa47447db6d42.txt  Screenshot-2026-01-05-204300_png.rf.78609816d392c803c46d915d1441cd0e.txt  Screenshot-2026-01-05-204519_png.rf.64f617d7e1c0f19107b4da9bf979f987.txt  Screenshot-2026-01-05-204959_png.rf.54145a425e2b94e3c926b58180a1782a.txt  Screenshot-2026-01-05-211115_png.rf.ef4ec9216f00c490a4f99c39b3e7b1f9.txt
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
