[project]
name = "ostad-module-11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "ultralytics>=8.3.248",
    "uvicorn>=0.40.0",
]
